@@ -69,6 +69,10 @@ Bug Fixes
 
 * SOLR-3633 - web UI reports an error if CoreAdminHandler says there are no 
   SolrCores (steffkes)
+  
+* SOLR-4489 - SpellCheckComponent can throw StringIndexOutOfBoundsException
+  when generating collations involving multiple word-break corrections.
+  (James Dyer)
 
 Optimizations
 ----------------------
